--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         ],
         "typeRoots": [
           "node_modules/@types",
+          "src/global.d.ts",
           "src/typings.d.ts"
         ],   
         "baseUrl": "./",
