--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "genshinfront",
-  "version": "1.0.0",
+  "name": "typefront",
+  "version": "0.1.0",
   "private": true,
-  "description": "",
-  "main": "./src/index.tsx",
-  "keywords": [],
-  "author": "Denis Masson",
-  "license": "ISC",
-  "scripts": {
-    "build-dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build-prod": "cross-env NODE_ENV=production webpack --mode production",
-    "build": "set \"GENERATE_SOURCEMAP=false\" && cross-env NODE_ENV=production webpack --mode production",
-    "server": "serve ./dist",
-    "start": "cross-env NODE_ENV=development webpack serve --mode development"
-  },
   "dependencies": {
     "@hookform/resolvers": "^2.8.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@types/node": "^16.7.13",
     "bootstrap": "5.1.3",
     "date-fns": "^2.24.0",
     "firebase": "^9.1.2",
@@ -27,66 +13,63 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.2.6",
     "lodash.debounce": "^4.0.8",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.17.0",
     "react-hot-loader": "^4.13.0",
     "react-hot-toast": "^2.1.1",
     "react-i18next": "^11.11.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.3.3",
     "styled-components": "^5.3.1",
+    "typescript": "^4.4.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
+    "build": "react-scripts build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "copy": "react-snap",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "reactSnap": {
+    "destination": "dist",
+    "inlineCss": true
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/runtime": "^7.17.2",
-    "@hot-loader/react-dom": "^17.0.2+4.13.0",
-    "@svgr/webpack": "^6.2.1",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "@types/react-router-dom": "^5.3.3",
-    "babel-loader": "^8.2.3",
-    "browserslist": "^4.19.3",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.6.0",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.10.0",
-    "eslint-config-react-app": "^7.0.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "lodash-webpack-plugin": "^0.11.6",
-    "mini-css-extract-plugin": "^2.6.0",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.4.7",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
-    "react-dev-utils": "^12.0.0",
-    "sass": "^1.49.9",
-    "sass-loader": "^12.6.0",
-    "style-loader": "^3.3.1",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.2.7",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "webpack-manifest-plugin": "^4.1.1"
+    "css-loader": "^6.3.0",
+    "mini-css-extract-plugin": "^2.3.0",
+    "node-sass": "^6.0.1",
+    "react-snap": "^1.23.0",
+    "sass-loader": "^12.1.0",
+    "source-map-explorer": "^2.5.2"
   }
 }
