--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,26 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": false,
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "resolveJsonModule": true,
-        "downlevelIteration": true,
-        "noEmitOnError": false,
-        "lib": [
-            "esnext",
-            "dom",
-            "dom.iterable"
-        ],
-        "typeRoots": [
-          "node_modules/@types",
-          "src/global.d.ts",
-          "src/typings.d.ts"
-        ],   
-        "baseUrl": "./",
-        "removeComments": true,
-        "target": "es5",
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "allowJs": true,
-        "declaration": true,
-        "jsx": "react",
-        "allowSyntheticDefaultImports": true,
-    },
-    "include": [
-        "./src"
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
-    "exclude": ["dist", "build", "node_modules"]
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": [
+    "src"
+  ]
 }
