--- a/.env.development.local
+++ b/.env.development.local
@@ -1,9 +1,4 @@
-# REACT_APP_API=http://localhost:4000/api
-# REACT_APP_ENDPOINT=http://localhost:4000/
-# REACT_APP_LOGOUT=http://localhost:4000/v/logout
-# REACT_APP_RECAPTCHAKEY=6LdS2AIcAAAAACLLZf1LfmtEHSBgwfxRq2kl4uCg
-
-REACT_APP_API=https://radiant-inlet-24493.herokuapp.com/api
-REACT_APP_ENDPOINT=https://radiant-inlet-24493.herokuapp.com/
-REACT_APP_LOGOUT=https://radiant-inlet-24493.herokuapp.com/v/logout
+REACT_APP_API=http://localhost:4000/api
+REACT_APP_ENDPOINT=http://localhost:4000/
+REACT_APP_LOGOUT=http://localhost:4000/v/logout
 REACT_APP_RECAPTCHAKEY=6LdS2AIcAAAAACLLZf1LfmtEHSBgwfxRq2kl4uCg
