--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-hot-loader": "^4.13.0",
     "react-hot-toast": "^2.1.1",
     "react-i18next": "^11.11.3",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.3.3",
@@ -62,9 +62,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-vertical-timeline-component": "^3.3.2",
+    "@types/uuid": "^8.3.4",
     "css-loader": "^6.3.0",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
