--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@types/node": "^16.7.13",
     "bootstrap": "5.1.3",
-    "date-fns": "^2.24.0",
+    "dayjs": "^1.11.1",
     "firebase": "^9.1.2",
     "i18next": "^20.3.3",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -24,7 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-vertical-timeline-component": "^3.3.3",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
     "yup": "^0.32.9"
@@ -62,9 +62,11 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.5",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.1",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-vertical-timeline-component": "^3.3.2",
+    "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
     "css-loader": "^6.3.0",
     "mini-css-extract-plugin": "^2.3.0",
