--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "i18next": "^20.3.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.2.6",
-    "react": "^18.0.0",
+    "react": "18.1.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.2",
-    "react-dom": "^18.0.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.17.0",
     "react-hot-loader": "^4.13.0",
     "react-hot-toast": "^2.1.1",
