--- a/package.json
+++ b/package.json
@@ -4,37 +4,35 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.8.1",
-    "@reduxjs/toolkit": "^1.6.2",
+    "@reduxjs/toolkit": "1.8.1",
     "@types/node": "^16.7.13",
     "bootstrap": "5.1.3",
     "dayjs": "^1.11.1",
-    "firebase": "^9.1.2",
-    "i18next": "^20.3.3",
-    "i18next-browser-languagedetector": "^6.1.2",
-    "i18next-http-backend": "^1.2.6",
+    "firebase": "9.7.0",
+    "i18next": "21.6.16",
+    "i18next-browser-languagedetector": "6.1.4",
+    "i18next-http-backend": "1.4.0",
     "react": "18.1.0",
     "react-animations": "^1.0.0",
-    "react-bootstrap": "^2.0.2",
+    "react-bootstrap": "2.3.1",
     "react-dom": "18.1.0",
-    "react-hook-form": "^7.17.0",
-    "react-hot-loader": "^4.13.0",
-    "react-hot-toast": "^2.1.1",
-    "react-i18next": "^11.11.3",
-    "react-redux": "^7.2.8",
+    "react-hook-form": "7.30.0",
+    "react-hot-toast": "2.2.0",
+    "react-i18next": "11.16.7",
+    "react-redux": "8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.0",
-    "react-vertical-timeline-component": "^3.3.3",
+    "react-scripts": "5.0.1",
+    "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2",
-    "yup": "^0.32.9"
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
     "build": "react-scripts build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "copy": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
