--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^2.8.1",
     "@reduxjs/toolkit": "1.8.1",
     "@types/node": "^16.7.13",
     "bootstrap": "5.1.3",
@@ -13,7 +12,6 @@
     "i18next-browser-languagedetector": "6.1.4",
     "i18next-http-backend": "1.4.0",
     "react": "18.1.0",
-    "react-animations": "^1.0.0",
     "react-bootstrap": "2.3.1",
     "react-dom": "18.1.0",
     "react-hook-form": "7.30.0",
@@ -25,8 +23,7 @@
     "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "uuid": "^8.3.2",
-    "yup": "0.32.11"
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
