--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "i18next-http-backend": "1.4.0",
     "react": "18.1.0",
     "react-bootstrap": "2.3.1",
+    "react-content-loader": "^6.2.0",
     "react-dom": "18.1.0",
     "react-hook-form": "7.30.0",
     "react-hot-toast": "2.2.0",
