--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "1.8.1",
-    "@types/node": "^16.7.13",
+    "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "dayjs": "^1.11.1",
     "firebase": "9.7.0",
@@ -32,7 +32,10 @@
     "build": "react-scripts build",
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "viteDev": "vite",
+    "viteBuild": "tsc && vite build",
+    "vitePreview": "vite preview"
   },
   "reactSnap": {
     "destination": "dist",
@@ -57,18 +60,22 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^16.7.13",
     "@types/react": "^18.0.5",
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.1",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-vertical-timeline-component": "^3.3.2",
+    "@types/react-vertical-timeline-component": "https://github.com/pumbasl/types-react-vertical-timeline-component",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-react": "^1.3.2",
     "css-loader": "^6.3.0",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
     "react-snap": "^1.23.0",
+    "sass": "^1.52.1",
     "sass-loader": "^12.1.0",
-    "source-map-explorer": "^2.5.2"
+    "source-map-explorer": "^2.5.2",
+    "vite": "^2.9.9"
   }
 }
