--- a/package.json
+++ b/package.json
@@ -20,22 +20,16 @@
     "react-i18next": "11.16.7",
     "react-redux": "8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "winBuild": "set \"GENERATE_SOURCEMAP=false\" && react-scripts build",
-    "build": "react-scripts build",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "viteDev": "vite",
-    "viteBuild": "tsc && vite build",
-    "vitePreview": "vite preview"
+    "analyze": "source-map-explorer 'dist/static/js/*.js'",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "reactSnap": {
     "destination": "dist",
@@ -60,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/eslint": "^8.4.2",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.5",
     "@types/react-animations": "^1.0.0",
@@ -68,14 +63,15 @@
     "@types/react-vertical-timeline-component": "https://github.com/pumbasl/types-react-vertical-timeline-component",
     "@types/styled-components": "^5.1.25",
     "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-legacy": "^1.8.2",
     "@vitejs/plugin-react": "^1.3.2",
-    "css-loader": "^6.3.0",
+    "eslint": "^8.16.0",
+    "eslint-config-react-app": "^7.0.1",
     "mini-css-extract-plugin": "^2.3.0",
-    "node-sass": "^6.0.1",
     "react-snap": "^1.23.0",
     "sass": "^1.52.1",
-    "sass-loader": "^12.1.0",
     "source-map-explorer": "^2.5.2",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-eslint": "^1.6.1"
   }
 }
