--- a/.env.development.local
+++ b/.env.development.local
@@ -1,4 +1,2 @@
 REACT_APP_API=http://localhost:4000/api
-REACT_APP_ENDPOINT=http://localhost:4000/
-REACT_APP_LOGOUT=http://localhost:4000/v/logout
-REACT_APP_RECAPTCHAKEY=6LdS2AIcAAAAACLLZf1LfmtEHSBgwfxRq2kl4uCg
+REACT_APP_ENDPOINT=http://localhost:4000
