--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typefront",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "1.8.1",
@@ -30,10 +30,6 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
-  },
-  "reactSnap": {
-    "destination": "dist",
-    "inlineCss": true
   },
   "eslintConfig": {
     "extends": [
@@ -67,11 +63,10 @@
     "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.16.0",
     "eslint-config-react-app": "^7.0.1",
-    "mini-css-extract-plugin": "^2.3.0",
-    "react-snap": "^1.23.0",
     "sass": "^1.52.1",
     "source-map-explorer": "^2.5.2",
     "vite": "^2.9.9",
     "vite-plugin-eslint": "^1.6.1"
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
