--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "dayjs": "^1.11.1",
-    "firebase": "9.7.0",
     "i18next": "21.6.16",
     "i18next-browser-languagedetector": "6.1.4",
     "i18next-http-backend": "1.4.0",
@@ -22,8 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.5",
-    "typescript": "^4.4.2",
-    "uuid": "^8.3.2"
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'dist/static/js/*.js'",
