--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-vertical-timeline-component": "3.5.2",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.2",
     "typescript": "^4.4.2"
   },
   "scripts": {
@@ -63,7 +64,7 @@
     "eslint-config-react-app": "^7.0.1",
     "sass": "^1.52.1",
     "source-map-explorer": "^2.5.2",
-    "vite": "^2.9.9",
+    "vite": "^3.0.2",
     "vite-plugin-eslint": "^1.6.1"
   },
   "packageManager": "yarn@3.2.1"
